# django-weather-app

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  wait-for-postgres.sh
apps/: urls.py
apps/weather/: admin.py  forms.py  models.py  urls.py  views.py
apps/weather/migrations/: 0001_initial.py  0002_city_name.py
apps/weather/templates/weather/: index.html
config/settings/: __init__.py
