[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "A boilerplate for Django backend projects"
authors = ["Vinh Le <lethanhvinh95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
